Nuget package created.

--- a/NeoClient/NeoClient.csproj
+++ b/NeoClient/NeoClient.csproj
@@ -1,13 +1,34 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <Authors>Oktay Kır</Authors>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/OKTAYKIR/NeoClient</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/OKTAYKIR/NeoClient</PackageProjectUrl>
+    <PackageIcon>NeoClient_nuget.png</PackageIcon>
+    <Version>1.0.1</Version>
+    <PackageTags>neo4j ogm bolt cyper graphdb graphdatabase nosql</PackageTags>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>false</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.1.0" />
     <PackageReference Include="Neo4j.Driver" Version="1.7.2" />
+    <PackageReference Include="NuGet.CommandLine" Version="5.5.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\icon\NeoClient_nuget.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
