--- a/NeoClient/NeoClient.csproj
+++ b/NeoClient/NeoClient.csproj
@@ -7,8 +7,9 @@
     <RepositoryUrl>https://github.com/OKTAYKIR/NeoClient</RepositoryUrl>
     <PackageProjectUrl>https://github.com/OKTAYKIR/NeoClient</PackageProjectUrl>
     <PackageIcon>NeoClient_nuget.png</PackageIcon>
-    <Version>1.0.1</Version>
+    <Version>1.1</Version>
     <PackageTags>neo4j ogm bolt cyper graphdb graphdatabase nosql</PackageTags>
+    <Description>Lightweight OGM for Neo4j which support transactions and BOLT protocol.</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
