--- a/NeoClient/NeoClient.csproj
+++ b/NeoClient/NeoClient.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net472</TargetFrameworks>
     <Authors>Oktay Kır</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/OKTAYKIR/NeoClient</RepositoryUrl>
     <PackageProjectUrl>https://github.com/OKTAYKIR/NeoClient</PackageProjectUrl>
     <PackageIcon>NeoClient_nuget.png</PackageIcon>
-    <Version>1.1</Version>
+    <Version>1.2</Version>
     <PackageTags>neo4j ogm bolt cyper graphdb graphdatabase nosql</PackageTags>
     <Description>Lightweight OGM for Neo4j which support transactions and BOLT protocol.</Description>
   </PropertyGroup>
@@ -17,6 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.1.1" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Neo4j.Driver" Version="1.7.2" />
   </ItemGroup>
