--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,5 @@ jobs:
     - name: NeoClient Build -f netstandard2.1
       run: dotnet build NeoClient/NeoClient.csproj --configuration Release -f netstandard2.1
         
-    - name: NeoClient Build -f netstandard2.1
-      run: dotnet build NeoClient/NeoClient.csproj --configuration Release -f net472
+    - name: NeoClient.Tests Build -f netcoreapp3.1
+      run: dotnet build NeoClient/NeoClient.csproj --configuration Release -f netcoreapp3.1
