--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
       run: dotnet build NeoClient/NeoClient.csproj --configuration Release -f netstandard2.1
         
     - name: NeoClient.Tests Build -f netcoreapp3.1
-      run: dotnet build NeoClient/NeoClient.csproj --configuration Release -f netcoreapp3.1
+      run: dotnet build NeoClient.Tests/NeoClient.Tests.csproj --configuration Release -f netcoreapp3.1
