--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ testci ]
   pull_request:
-    branches: [ master ]
+    branches: [ testci ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -26,7 +26,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
-      
+    
     - name: NeoClient Build -f netstandard2.0
       run: dotnet build NeoClient/NeoClient.csproj --configuration Release -f netstandard2.0
     
@@ -35,3 +35,15 @@ jobs:
         
     - name: NeoClient.Tests Build -f netcoreapp3.1
       run: dotnet build NeoClient.Tests/NeoClient.Tests.csproj --configuration Release -f netcoreapp3.1
+      
+    - name: Build the stack
+      run: docker-compose up -d -f NeoClient.Tests/NeoClient.Tests/resources/docker-compose.yml
+    
+    - name: Check running containers
+      run: docker ps -a
+      
+    - name: Check logs
+      run: docker-compose logs
+      
+    - name: Tests
+      run: dotnet test NeoClient.Tests/NeoClient.Tests.csproj --configuration Release
