--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       run: dotnet build NeoClient.Tests/NeoClient.Tests.csproj --configuration Release -f netcoreapp3.1
       
     - name: Build the stack
-      run: docker-compose up -d -f NeoClient.Tests/NeoClient.Tests/resources/docker-compose.yml
+      run: docker-compose -f NeoClient.Tests/NeoClient.Tests/resources/docker-compose.yml up -d
     
     - name: Check running containers
       run: docker ps -a
