--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Build the stack
-      run: docker-compose up -d
+      run: docker-compose -f NeoClient.Tests/resources/docker-compose.yml up -d
       
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
