--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build and test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
           
@@ -43,7 +43,7 @@ jobs:
       run: docker ps -a
       
     - name: Check logs
-      run: docker-compose -f logs NeoClient.Tests/resources/docker-compose.yml
+      run: docker-compose -f NeoClient.Tests/resources/docker-compose.yml logs
       
     - name: Tests
       run: dotnet test NeoClient.Tests/NeoClient.Tests.csproj --configuration Release
